[project]
name = "energy-calc"
version = "0.1.0"
description = "Web app to provide various energy-related calculators."
readme = "README.md"
requires-python = ">=3.14, <4"
dependencies = [
    "nicegui>=3.10.0",
    "requests>=2.31.0",
    "psychrolib>=2.5.0",
    "numpy>=2.0.0",
    "numpy-financial>=1.0.0",
    "matplotlib>=3.9.0",
]
